@@ -1724,7 +1724,13 @@ PHP_METHOD(SoapServer, handle)
 		    instanceof_function(Z_OBJCE_P(EG(exception)), soap_fault_class_entry TSRMLS_CC)) {
 			soap_server_fault_ex(function, EG(exception), NULL TSRMLS_CC);
 		} else {
-			if (soap_obj) {zval_ptr_dtor(&soap_obj);}
+#if HAVE_PHP_SESSION && !defined(COMPILE_DL_SESSION)
+			if (soap_obj && service->soap_class.persistance != SOAP_PERSISTENCE_SESSION) {
+#else
+			if (soap_obj) {
+#endif
+			  zval_ptr_dtor(&soap_obj);
+			}
 			php_end_ob_buffer(0, 0 TSRMLS_CC);
 			goto fail;
 		}
